# PDF_Forger

./: .gitignore  CONVERSION_PLAN.md  IMPLEMENTATION.md  IMPLEMENTATION_AUDIT_REPORT.md  LICENSE  NOTICE  PDFForge_Android_System_Design.html  PDFForge_Android_System_Design.md  README.md  TODO.md  The Architecture diagram.md  VERSION_AUDIT.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/: README.md
.github/workflows/: ci.yml  pages.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/dev/pdfforge/: MainActivity.kt  PdfForgeApp.kt
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: network_security_config.xml
common/ui/: build.gradle.kts
common/utils/: build.gradle.kts
common/utils/src/main/kotlin/dev/pdfforge/common/utils/: PdfForgeUtils.kt
data/impl/: build.gradle.kts
data/impl/src/main/kotlin/dev/pdfforge/data/impl/: SafFileAdapter.kt
data/storage/: build.gradle.kts
data/worker/: build.gradle.kts
data/worker/src/main/kotlin/dev/pdfforge/data/worker/: PdfWorker.kt  (+1 more)
domain/core/: build.gradle.kts
domain/models/: build.gradle.kts
engine/converter/: build.gradle.kts
engine/converter/src/main/assets/fonts/: README.md
engine/mupdf/: MUPDF_INTEGRATION.md  build.gradle.kts
engine/mupdf/docker/: Dockerfile  README.md  build.sh  run.sh
engine/mupdf/prebuilt/: mini-1.24.4a.aar
engine/mupdf/scripts/: build_mupdf_android.sh
engine/mupdf/src/main/cpp/: CMakeLists.txt  mupdf-bridge.cpp
feature/compression/: build.gradle.kts
feature/conversion/: TABLES_AND_LAYOUT_IMPLEMENTATION.md  build.gradle.kts
feature/home/: build.gradle.kts
feature/merge_split/: build.gradle.kts
feature/pdf_creation/: build.gradle.kts
gradle/: libs.versions.toml
(+63 files in other folders)
